tests/ui/privacy/pub-priv-dep/path-provenance.stderr
error: type `private_facade::Nominal` from private dependency 'path_provenance_private_facade' in public interface
  --> $DIR/path-provenance.rs:68:1
   |
LL | pub fn private_nominal_default() -> private_facade::Nominal {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/path-provenance.rs:7:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: trait `private_facade::TraitAlias` from private dependency 'path_provenance_private_facade' in public interface
  --> $DIR/path-provenance.rs:127:1
   |
LL | pub fn private_trait_alias<X: private_facade::TraitAlias>() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors
